added 2D graphs with 3D inflation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </div>
 
 <div class="bottomNote">
- Use the mouse pointer and the mouse wheel (or touch) to turn and zoom the graph's display.
+ Use the mouse pointer and the mouse wheel (or touch) to turn and zoom the graph's display.<br>
+ The element names are displayed in popups when you place the mouse over a node.
 </div>
 
 <div class="footer">
