Additional lattice types added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </div>
 
 <div class="bottomNote">
- Use the mouse pointer and the mouse wheel (or touch) to turn and zoom the graph's display.<br>
- The element names are displayed in popups when you place the mouse over a node.
+ Use the mouse buttons (left/right click+drag) and the mouse wheel to rotate, move and zoom the 3D graph.<br>
+ The element names are displayed in popups when you place the mouse pointer over a node.
 </div>
 
 <div class="footer">
